--- a/docker/compose/compose.yml
+++ b/docker/compose/compose.yml
@@ -72,6 +72,28 @@ services:
     networks:
       - monitoring
 
+  item-db:
+    image: postgres:15
+    container_name: item-db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: item
+    ports:
+      - "5432:5432"
+    volumes:
+      - item-db-data:/var/lib/postgresql/data
+    networks:
+      - monitoring
+    labels:
+      - "traefik.enable=false"
+      - "prometheus.scrape=true"
+      - "prometheus.port=5432"
+      - "prometheus.path=/metrics"
+
 networks:
   traefik:
   monitoring:
+
+volumes:
+  item-db-data:
